Gesture Anywhere : Bring my crazy love back! [1/3]
Change-Id: I40bbc939b586c1820db491670a5e482c5fc74788

Conflicts:
	packages/SystemUI/src/com/android/systemui/statusbar/phone/PhoneStatusBar.java
	packages/SystemUI/res/values/ex_strings.xml
	packages/SystemUI/res/values/projekt_colors.xml

--- a/packages/SystemUI/res/values/ex_strings.xml
+++ b/packages/SystemUI/res/values/ex_strings.xml
@@ -303,4 +303,7 @@
     <string name="dlg_cancel">Cancel</string>
     <string name="kill">Kill App</string>
 
+    <!-- Gesture anywhere -->
+    <string name="gestures_message">Draw your gesture here</string>
+
 </resources>
