--- a/packages/SystemUI/res/values/projekt_colors.xml
+++ b/packages/SystemUI/res/values/projekt_colors.xml
@@ -86,4 +86,15 @@
     <!-- Screen pinning layout -->
     <color name="screen_pinning_background_color">@*android:color/accent_device_default_light</color>
     <color name="screen_pinning_button_text">@android:color/white</color>
+
+    <!-- Gesture anywhere overlay colors -->
+    <color name="ga_bg_gradient_start">#e8161616</color>
+    <color name="ga_bg_gradient_center">#d0161616</color>
+    <color name="ga_bg_gradient_end">#77161616</color>
+    <color name="ga_gesture_color">#ff850f0f</color>
+    <color name="ga_info_text_color">#ff850f0f</color>
+    <color name="ga_info_icon_color">#ff850f0f</color>
+    <color name="ga_fab_bg_color">#282828</color>
+    <color name="ga_fab_icon_color">@*android:color/accent_material_dark</color>
+    <color name="ga_fab_color_ripple">#ff7a7a7a</color>
 </resources>
